--- a/_includes/si/intro.html
+++ b/_includes/si/intro.html
@@ -1,9 +1,24 @@
 <p>
-  The <a href="{{site.sih_site}}">Sydney Informatics Hub</a>
-  is a Core Research Facility of the University of Sydney. SIH provides support, training, and expertise on research data, analyses
-  and computing for research staff, students and affiliates of the University. We deliver policies, systems, advice, engineering and
-  training to research staff, students and affiliates of the University.
+ Machine learning is the study and application of algorithms that learn from and make predictions on data. It has revolutionised how we find things, online and off, choose which clothes to buy, which books to read and movies to watch, -  and, most critically, how we do research.</p>
 
-  If you'd like to work with us on a project, get support with your own work or otherwise engage with our services, please fill out our help form <a href="{{site.sih_site}}/help">here</a>
+<p> In this hands-on, live coding course, we will use the open-source statistical programming language R to introduce the overall framework of a machine learning project, from exploring and visualising the data to selecting, optimising and comparing models.</p>
 
+<p>We will then work through key examples of applying  supervised and unsupervised learning methods. </p>
+
+<p>At the end of the courses students will have a broad overview of the machine learning landscape in R,  will have implemented and practiced applying (via a wide variety of hands-on exercises) some of the most commonly used approaches on tabular datasets. </p>
+
+<p>Participants should then be able to apply what they have learnt to their own research data, understand some of the “jargon” used to describe machine learning approaches in their field of interest, and hopefully  feel confident enough to explore and apply new methods described in the literature to their own research questions. </p>
+
+<p>Please note this course <b>will not</b> introduce:
+
+<ul>
+  <li> Neural networks and Deep Learning (for image or textual analysis) </li>
+  <li> Natural Language Processing for Research </li>
+</ul>
+As these topics are the subject of other workshops currently under development at SIH (to be run mid/late 2019). 
 </p>
+
+<p>We also offer a python version of this course.</p>
+
+  
+ 
