--- a/_includes/si/intro.html
+++ b/_includes/si/intro.html
@@ -13,7 +13,7 @@
   <li> Neural networks and Deep Learning (for image or textual analysis) </li>
   <li> Natural Language Processing for Research </li>
 </ul>
-As these topics are the subject of other workshops currently under development at SIH (to be run mid/late 2019).  We also offer a python version of this course (next session will be delivered in April 2019).
+As these topics are the subject of other workshops currently under development at SIH (to be run mid/late 2019).  <b>We also offer a python version of this course (next session will be delivered in April 2019)</b>.
 
   
  
