--- a/_includes/si/intro.html
+++ b/_includes/si/intro.html
@@ -1,11 +1,11 @@
 <p>
  Machine learning is the study and application of algorithms that learn from and make predictions on data. It has revolutionised how we find things, online and off, choose which clothes to buy, which books to read and movies to watch, -  and, most critically, how we do research.</p>
 
-<p> In this hands-on, live coding course, we will use the open-source statistical programming language R to introduce the overall framework of a machine learning project, from exploring and visualising the data to selecting, optimising and comparing models. We will then work through key examples of applying  supervised and unsupervised learning methods. </p>
+<p> In this hands-on, live coding course, we will use the python open-source programming language to introduce the overall framework of a machine learning project, from exploring and visualising the data to selecting, optimising and comparing models. We will then work through key examples of applying  supervised and unsupervised learning methods. </p>
 
-<p>At the end of the courses students will have a broad overview of the machine learning landscape in R,  will have implemented and practiced applying (via a wide variety of hands-on exercises) some of the most commonly used approaches on tabular datasets. </p>
+<p>At the end of the courses students will have a broad overview of the machine learning landscape in python,  will have implemented and practiced applying (via a wide variety of hands-on exercises) some of the most commonly used approaches on tabular datasets. </p>
 
-<p>Participants should then be able to apply what they have learnt to their own research data, understand some of the “jargon” used to describe machine learning approaches in their field of interest, and hopefully  feel confident enough to explore and apply new methods described in the literature to their own research questions. </p>
+<p> Participants should then be able to apply what they have learnt to their own research data, understand some of the “jargon” used to describe machine learning approaches in their field of interest, and hopefully  feel confident enough to explore and apply new methods described in the literature to their own research questions. </p>
 
 <p>Please note this course <b>will not</b> introduce:
 
@@ -13,7 +13,7 @@
   <li> Neural networks and Deep Learning (for image or textual analysis) </li>
   <li> Natural Language Processing for Research </li>
 </ul>
-As these topics are the subject of other workshops currently under development at SIH (to be run mid/late 2019).  <b>We also offer a python version of this course (next session will be delivered in April 2019)</b>.
+As these topics are the subject of other workshops currently under development at SIH (to be run mid/late 2019).  <b>We also offer an R version of this course, with 2 session to be delivered in July 2019. </b>
 
   
  
