--- a/_includes/si/who.html
+++ b/_includes/si/who.html
@@ -1,8 +1,9 @@
 <p id="who">
   <strong>Who:</strong>
   The course is aimed at researchers, including ECRs, MCRs, HDR students and others. 
+  
   <strong>
-   Basic familiarity with R and the tidyverse is required.</strong>
+    You MUST be comfortable using python and Jupyter notebooks to attend this course!!!</strong>
 
     Participants will be encouraged to help one another and to apply what they have learned to their own research problems.
 
